# watpocket

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  LICENSE  ProjectOptions.cmake  README.md  comp.sh  pyproject.toml  tui.json
.cache/clangd/index/: 3MF.h.9BDE555854EBE98E.idx  3MF.h.A64DB4CEFCCF34EF.idx  3MF.h.DF45D6295D470704.idx  Aff_transformationH2.h.2103E08C2F66D10D.idx  Aff_transformationH3.h.054578102A8EC02C.idx  Aff_transformation_2.h.5358F3D14B10EAE0.idx  Aff_transformation_2.h.558D64C092E2C0D6.idx  Aff_transformation_3.h.7F281E8D8DB4A330.idx  Aff_transformation_3.h.A43A6165C3F6C904.idx  Aff_transformation_rep_2.h.CEFB6B119147E5D8.idx  Aff_transformation_rep_3.h.2B0943039E31A5E3.idx  Algebraic_extension_traits.h.1F5A9A29B64677FD.idx  Algebraic_extension_traits.h.6EA9777D65022463.idx  Algebraic_structure_traits.h.0A58332DEFFD26E5.idx  Algebraic_structure_traits.h.6713B25846405B02.idx  Angle_3.h.EC850996F02F0B30.idx  Arithmetic_kernel_base.h.CEBA8DA3FC044DA3.idx  Atom.hpp.4D28B2DECA4A4D21.idx  BOOST_MP_arithmetic_kernel.h.CC1B7816867CFC6F.idx  Bbox_2.h.EA71B3A71B8EF0D2.idx  Bbox_2_Bbox_2.h.5E0C7AD66EC07FA0.idx  Bbox_2_Circle_2.h.2D1858B702DBC00A.idx  Bbox_2_Iso_rectangle_2.h.D64A171B57F270DC.idx  Bbox_2_Line_2.h.122EE4155F7A65BE.idx  Bbox_2_Point_2.h.4ACCBBE08A43C576.idx  Bbox_2_Ray_2.h.65619F3B75212C88.idx  Bbox_2_Segment_2.h.B1E1427C274EA76B.idx  Bbox_2_Triangle_2.h.242A4AD899C06154.idx  Bbox_3.h.D6017745A9396FCD.idx  Bbox_3_Bbox_3.h.F362FBF1C4B0B49C.idx  Bbox_3_Iso_cuboid_3.h.EA0A3639A83A5D9F.idx  Bbox_3_Iso_cuboid_3_do_intersect.h.74931EA6989048E8.idx  Bbox_3_Iso_cuboid_3_intersection.h.8C51A8E01576BD6B.idx  Bbox_3_Line_3.h.71ADBB632857DEFB.idx  Bbox_3_Line_3_do_intersect.h.E0D7C8AF328CEB47.idx  Bbox_3_Line_3_intersection.h.45BAB6096CAEED7C.idx  Bbox_3_Plane_3.h.840F28849696EA52.idx  Bbox_3_Plane_3_do_intersect.h.30EB146B431218CC.idx  Bbox_3_Point_3.h.4E21F8F1086FB0CE.idx  Bbox_3_Ray_3.h.A7136C55F5BCB774.idx  (+689 more)
.codex/agents/: 2026-03-01refactorer.md  cgal_mapper.md  chemfiles_mapper.md  mapper.md  planner.md
.github/workflows/: auto-clang-format.yml  ci.yml  codeql-analysis.yml  wasm.yml
cmake/: CPM.cmake  Hardening.cmake
codebase-analysis-docs/: codebasemap.md
codebase-analysis-docs/assets/: architecture.mmd  data-flow.mmd  library-boundary.mmd
configured_files/: config.hpp.in
include/watpocket/: watpocket.hpp
intro/: intro.js  intro.wasm
plans/: 26-02-27-netcdf-trajectory-water-pocket-csv.md  26-02-27-parm7-topology-support.md  26-02-27-trajectory-draw-model-pdb.md  26-02-27-watpocket-initial-feature.md  26-02-27-watpocket-water-pocket-selection.md  26-03-01-library-first-refactor.md  26-03-01-missing-features-library-api.md  26-03-01-pointsoa-full-migration.md  exported-pointsoa-readers-26-03-01.md  nanobind-python-bindings-26-03-03.md  parallel-analyze-trajectory-files-26-03-03.md  remove-callbacks-summary-warnings-26-03-03.md  template-trajectory-callbacks-26-03-03.md
scripts/: pypi_release_wheels.sh  pypi_version_provider.py
src/: CMakeLists.txt
src/python/: CMakeLists.txt  bindings.cpp  pythoninstall_preflight.cmake.in
src/watpocket/: CMakeLists.txt  main.cpp
src/watpocket_lib/: CMakeLists.txt  point_soa_cgal_adapter.cpp  point_soa_cgal_adapter.hpp  watpocket.cpp
test/: CMakeLists.txt  package_consumer.cpp  verify_draw_pdb_contains_waters.cmake  watpocket_api_tests.cpp
test/data/wcn/: 0.nc.csv  0complex_wcn.py  1.csv  1.nc.csv  1complex_wcn.py  complex_wcn.rst7
test/integration/wcn/: run.sh  verify_outputs_match_benchmarks.cmake  verify_trajectory_csv_matches_benchmark.cmake
test/python/: integration_wcn_0nc_threads.py  integration_wcn_1nc.py
tests/data/wcn/: 0.csv  resal.py  run.sh  sal.py
