[build-system]
requires = [
  "scikit-build-core>=0.10",
  "nanobind>=2.2",
]
build-backend = "scikit_build_core.build"

[project]
name = "watpocket"
dynamic = ["version"]
description = "Python bindings for watpocket"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "watpocket developers" }]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "twine>=5.1",
  "auditwheel>=6.1; sys_platform == 'linux'",
]

[tool.scikit-build]
cmake.version = ">=3.28"
cmake.build-type = "Release"
build.targets = ["watpocket_ext", "watpocket_stub"]
wheel.packages = []
experimental = true

[tool.scikit-build.cmake.define]
WATPOCKET_ENABLE_PYTHON_BINDINGS = "ON"
WATPOCKET_BUILD_CLI = "OFF"
BUILD_TESTING = "OFF"
CMAKE_BUILD_TYPE = "Release"
myproject_ENABLE_SANITIZER_ADDRESS = "OFF"
myproject_ENABLE_SANITIZER_UNDEFINED = "OFF"
myproject_ENABLE_CLANG_TIDY = "OFF"
myproject_ENABLE_CPPCHECK = "OFF"

[tool.scikit-build.metadata.version]
provider = "pypi_version_provider"
provider-path = "scripts"
